2008-08-18  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_prepare_output_buffer):
	If the element is configured in passthrough mode but the
	prepare_output_buffer gave us a new output buffer, discard that buffer
	and reuse the input buffer.

2008-08-15  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Ole André Vadla Ravnås  <ole.andre.ravnas at tandberg com>

	* plugins/elements/gsttee.c: (gst_tee_finalize), (gst_tee_init),
	(gst_tee_request_new_pad), (gst_tee_release_pad),
	(gst_tee_find_buffer_alloc), (gst_tee_buffer_alloc):
	* plugins/elements/gsttee.h:
	Protect pad_alloc with a new lock so that we can be sure that nothing is
	performing a pad_alloc when removing the pad. Fixes #547835.

	* tests/check/elements/tee.c: (buffer_alloc_harness_setup),
	(buffer_alloc_harness_teardown), (app_thread_func),
	(final_sinkpad_bufferalloc), (GST_START_TEST), (tee_suite):
	Added testcase for shutdown race.

2008-08-14  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/gstpad.h:
	Add doc

2008-08-14  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_prepare_output_buffer),
	(gst_base_transform_buffer_alloc):
	Go over the buffer_alloc function again and make sure we always end up
	allocating a buffer.
	Add some more docs.
	Avoid doing pad alloc when we have a pending suggestion because we
	cannot yet deal with changing caps in that case. Fixes #547728

2008-08-14  Stefan Kost  <ensonic@users.sf.net>

	patch by: Luc Pionchon <luc.pionchon@nokia.com>

	* docs/manual/advanced-clocks.xml:
	* docs/manual/clocks.png:
	* docs/manual/diagrams-clocks.svg:
	  Add one more image showing different times together with a describing
	  paragraph. Fixes #547729.

2008-08-14  Wim Taymans  <wim.taymans@collabora.co.uk>

	* win32/common/libgstbase.def:
	Add new method.

2008-08-14  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasetransform.c: