@@ -1,3 +1,8 @@
+2008-08-18  Tim-Philipp Müller  <tim.muller at collabora co uk>
+
+	* tools/gst-launch.1.in:
+	  Document GST_REGISTRY_UPDATE environment variable.
+
 2008-08-18  Wim Taymans  <wim.taymans@collabora.co.uk>
 
 	* libs/gst/base/gstbasetransform.c:
